<resources>
    <string name="app_name">Weather</string>
    <string name="hint_NewCity">Enter City Name</string>
    <string name="button_AddCity">Add</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="location">Location</string>
    <string name="condition">Condition</string>
    <string name="lastUpdate">Last update:</string>
    <string name="labelHumidity">Humidity:</string>
    <string name="labelPressure">Pressure:</string>
    <string name="humidityPercentage">%</string>
    <string name="TitleAddCity">Add City</string>
    <string name="labelAddCity">Enter City Name</string>
</resources>
