<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:text="@string/TitleAddCity"/>
    <!--
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/dividerHorizontal" />
    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelAddCity"/>
        <EditText
            android:id="@+id/editTextCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/buttonAddCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_AddCity" />
    </LinearLayout>
</LinearLayout>